--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         <div class="content">
             <div class="head">
                 <div class="logo">
-                    <a href="/">
+                    <a href="#to_top">
                         <img src="icons/logo.png" alt="Логотип" class="logo_img">
                     </a>
                 </div>
                 <div class="menu">
                     <ul class="menu_ul">
                         <li class="menu_item">
-                            <a href="/" class="menu_item">  Главная</a>
+                            <a href="#to_top" class="menu_item">Главная</a>
                         </li>
                         <li class="menu_item">
-                            <a href="/about" class="menu_item">О нас</a>
+                            <a href="#to_about" class="menu_item">О нас</a>
                         </li>
                         <li class="menu_item">
-                            <a href="/rules" class="menu_item">Правила</a>
+                            <a href="#to_rules" class="menu_item">Правила</a>
                         </li>
                     </ul>
                 </div>
@@ -35,11 +35,35 @@
         </div>
     </header>
     <main>
-        <div class="main_fone">
+        <div class="main_fone" id="to_top">
             <div class="content">
                 <div class="title_box">
                     <h1 class="title">Добро пожаловать на FoxCraft</h1>
                     <h2 class="title2">FoxCraft это сервер для общения друзей и веселого времяпровождения! Наш сервер объединяет самые разнообразные группы людей. Присоединяйтесь к нам!</h2>
+                </div>
+            </div>
+        </div>
+        <div class="about_body" id="to_about">
+            <div class="content">
+                <div class="about">
+                    <div class="about_text">                  
+                        <h1 class="title1 white">╭═────═ ⌘ О нас ⌘═────═╮</h1>
+                        <p class="text white">FoxCraft это сервер для общения друзей и веселого времяпровождения! Вам здесь будут рады в любом случае :3 Конечно мы не идеальны, как и всё, и здесь также присутствуют свои токсики, но даже они крайне милые^^
+                            Наш сервер объединяет разнообразные группы людей, в том числе и по интересам, например: фанаты Hollow Knight, Minecraft'а, Селесты и каждый может найти общий язык друг с другом!
+                            Мы не просто какой-то сервер по мАйНкРаФтУ - мы объединение друзей и знакомых.. Мы FoxCraft!</p>
+                    </div>
+                    <img src="/icons/fone.png" alt="" class="small_img">
+                </div>
+            </div>
+        </div>
+        <div class="rules_body" id="to_rules">
+            <div class="content">
+                <div class="rules">
+                    <img src="/icons/fone.png" alt="" class="small_img">
+                    <div class="rules_text">
+                        <h1 class="title1">╭═──═ ⌘ Основные правила ⌘═──═╮</h1>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius molestias, nihil vero dolor quo doloribus? Obcaecati deserunt voluptate incidunt corrupti, error itaque asperiores autem iure explicabo ea adipisci. Provident, nesciunt!</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -48,4 +72,6 @@
         <div class="content"></div>
     </footer>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </html>
