--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="content">
                 <div class="title_box">
                     <h1 class="title">Добро пожаловать на FoxCraft</h1>
-                    <h2 class="title2">FoxCraft это сервер для общения друзей и веселого времяпровождения! Наш сервер объединяет самые разнообразные группы людей. Присоединяйтесь к нам!</h2>
+                    <h2 class="title2">Присоединяйтесь к нам!</h2>
                 </div>
             </div>
         </div>
@@ -59,10 +59,10 @@
         <div class="rules_body" id="to_rules">
             <div class="content">
                 <div class="rules">
-                    <img src="/icons/fone.png" alt="" class="small_img">
+                    <img src="/icons/fone.png" alt="" class="small_img hiden">
                     <div class="rules_text">
                         <h1 class="title1">╭═──═ ⌘ Основные правила ⌘═──═╮</h1>
-                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius molestias, nihil vero dolor quo doloribus? Obcaecati deserunt voluptate incidunt corrupti, error itaque asperiores autem iure explicabo ea adipisci. Provident, nesciunt!</p>
+                        <p class="text">Lorem ipsum dolor  sit amet consectetur adipisicing elit. Eius molestias, nihil vero dolor quo doloribus? Obcaecati deserunt voluptate incidunt corrupti, error itaque asperiores autem iure explicabo ea adipisci. Provident, nesciunt!</p>
                     </div>
                 </div>
             </div>
