--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                         <li class="menu_item">
                             <a href="#to_rules" class="menu_item">Правила</a>
                         </li>
+                        <li>
+                            <a href="https://discord.gg/yxkfnW7sQQ" target="_blank" class="menu_item">Зайти на сервер</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -39,7 +42,7 @@
             <div class="content">
                 <div class="title_box">
                     <h1 class="title">Добро пожаловать на FoxCraft</h1>
-                    <h2 class="title2">Присоединяйтесь к нам!</h2>
+                    <h2 class="title2"><a class="link" href="https://discord.gg/yxkfnW7sQQ" target="_blank">Присоединяйтесь</a> к нам!</h2>
                 </div>
             </div>
         </div>
@@ -52,24 +55,40 @@
                             Наш сервер объединяет разнообразные группы людей, в том числе и по интересам, например: фанаты Hollow Knight, Minecraft'а, Селесты и каждый может найти общий язык друг с другом!
                             Мы не просто какой-то сервер по мАйНкРаФтУ - мы объединение друзей и знакомых.. Мы FoxCraft!</p>
                     </div>
-                    <img src="/icons/fone.png" alt="" class="small_img">
+                    <img src="/icons/fox.jpg" alt="" class="small_img">
                 </div>
             </div>
         </div>
         <div class="rules_body" id="to_rules">
             <div class="content">
                 <div class="rules">
-                    <img src="/icons/fone.png" alt="" class="small_img hiden">
                     <div class="rules_text">
                         <h1 class="title1">╭═──═ ⌘ Основные правила ⌘═──═╮</h1>
-                        <p class="text">Lorem ipsum dolor  sit amet consectetur adipisicing elit. Eius molestias, nihil vero dolor quo doloribus? Obcaecati deserunt voluptate incidunt corrupti, error itaque asperiores autem iure explicabo ea adipisci. Provident, nesciunt!</p>
+                            <p class="text"><b>Пожалуйста, проявляйте уважение к любому человеку в чате, будь то он ваш друг или кто-то еще, кого вы не знаете..</b>
+                            <p class="text">1. Запрещен спам, флуд, сообщения не несущие смысловой нагрузки..</p>
+                            <p class="text">2. Запрещены оскорбления, если они оскорбительны...</p>
+                            <p class="text">3. Угрозы, если они реально угрожающие - запрещены.</p>
+                            <p class="text"><b>Правила сервера в майнкрафте:</b></p>
+                            <p class="text">1. Запрещено использование читов, в том числе ресурспаков x-ray, а так же стороннего софта который даёт вам преимущество над другими игроками.</p>
+                            <p class="text">2. Запрещено использование любых дюпов майнкрафта кроме дюпа взрывов.</p>
+                            <p class="text">3. Запрещено гриферство</p>
+                            <p class="text">4. Запрещён нон рп!</p>
+                            <p class="text margt"><u>Более подробные правила вы найдете в нашем дискорде!</u></p>
+                            <p class="text"></p>
+                            <p class="text"></p>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </main>
     <footer>
-        <div class="content"></div>
+        <div class="content">
+            <div class="footer">
+                <label class="white text">FoxCraft 2020 - 2021</label>
+                <div class="btn"><a href="https://discord.gg/yxkfnW7sQQ" class="menu_item">Зайти на сервер!</a></div>
+            </div>
+        </div>
     </footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
