--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             Наш сервер объединяет разнообразные группы людей, в том числе и по интересам, например: фанаты Hollow Knight, Minecraft'а, Селесты и каждый может найти общий язык друг с другом!
                             Мы не просто какой-то сервер по мАйНкРаФтУ - мы объединение друзей и знакомых.. Мы FoxCraft!</p>
                     </div>
-                    <img src="/icons/fox.jpg" alt="" class="small_img">
+                    <img src="icons/fox.jpg" alt="" class="small_img">
                 </div>
             </div>
         </div>
