адаптив для мобилки

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <img src="icons/logo.png" alt="Логотип" class="logo_img">
                     </a>
                 </div>
-                <div class="menu">
+                <nav class="menu">
                     <ul class="menu_ul">
                         <li class="menu_item">
                             <a href="#to_top" class="menu_item">Главная</a>
@@ -29,11 +29,11 @@
                         <li class="menu_item">
                             <a href="#to_rules" class="menu_item">Правила</a>
                         </li>
-                        <li>
-                            <a href="https://discord.gg/yxkfnW7sQQ" target="_blank" class="menu_item">Зайти на сервер</a>
+                        <li class="login">
+                            <a href="https://discord.gg/yxkfnW7sQQ" target="_blank" class="login">Зайти на сервер</a>
                         </li>
                     </ul>
-                </div>
+                </nav>
             </div>
         </div>
     </header>
@@ -53,7 +53,7 @@
                         <h1 class="title1 white">╭═────═ ⌘ О нас ⌘═────═╮</h1>
                         <p class="text white">FoxCraft это сервер для общения друзей и веселого времяпровождения! Вам здесь будут рады в любом случае :3 Конечно мы не идеальны, как и всё, и здесь также присутствуют свои токсики, но даже они крайне милые^^
                             Наш сервер объединяет разнообразные группы людей, в том числе и по интересам, например: фанаты Hollow Knight, Minecraft'а, Селесты и каждый может найти общий язык друг с другом!
-                            Мы не просто какой-то сервер по мАйНкРаФтУ - мы объединение друзей и знакомых.. Мы FoxCraft!</p>
+                            Мы не просто какой-то сервер - мы объединение друзей и друзей друзей. Мы FoxCraft!</p>
                     </div>
                     <img src="icons/fox.jpg" alt="" class="small_img">
                 </div>
@@ -73,11 +73,11 @@
                             <p class="text">2. Запрещено использование любых дюпов майнкрафта кроме дюпа взрывов.</p>
                             <p class="text">3. Запрещено гриферство</p>
                             <p class="text">4. Запрещён нон рп!</p>
-                            <p class="text margt"><u>Более подробные правила вы найдете в нашем дискорде!</u></p>
+                            <p class="text margt"><u>Более подробные правила вы найдете в нашем дискорде и по <a target="_blank" href="https://github.com/foxcraft-official/info/blob/main/README.md" class="menu_item black">ссылке</a>!</u></p>
                             <p class="text"></p>
                             <p class="text"></p>
-                        
                     </div>
+
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
         <div class="content">
             <div class="footer">
                 <label class="white text">FoxCraft 2020 - 2021</label>
-                <div class="btn"><a href="https://discord.gg/yxkfnW7sQQ" class="menu_item">Зайти на сервер!</a></div>
+                <div class="btn"><a href="https://discord.gg/yxkfnW7sQQ" class="btn">Зайти на сервер!</a></div>
             </div>
         </div>
     </footer>
