--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <a href="#to_about" class="menu_item">О нас</a>
                         </li>
                         <li class="menu_item">
-                            <a href="/docs.html" class="menu_item">Правила</a>
+                            <a href="/foxcraft.github.io/docs" class="menu_item">Правила</a>
                         </li>
                         <li class="login">
                             <a href="https://discord.gg/yxkfnW7sQQ" target="_blank" class="login">Зайти на сервер</a>
