--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <p class="text">2. Запрещено использование любых дюпов майнкрафта кроме дюпа взрывов.</p>
                             <p class="text">3. Запрещено гриферство</p>
                             <p class="text">4. Запрещён нон рп!</p>
-                            <p class="text margt"><u>Более подробные правила вы найдете в нашем дискорде и по <a target="_blank" href="https://github.com/foxcraft-official/info/blob/main/README.md" class="menu_item black">ссылке</a>!</u></p>
+                            <p class="text margt"><u>Более подробные правила вы найдете в нашем дискорде и по <a href="https://foxcraft-official.github.io/foxcraft.github.io/docs"" class="black">ссылке</a>!</u></p>
                             <p class="text"></p>
                             <p class="text"></p>
                     </div>
