--- a/docs.html
+++ b/docs.html
@@ -6,9 +6,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <script src="assets/documents.js"></script>
+    <script src="assets/general.js"></script>
     <title>FoxCraft | Docs</title>
     <link href="assets/logo.ico" rel="icon">
+    <link href="assets/global.css" rel="stylesheet" type="text/css">
     <link href="assets/documents.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -19,6 +20,7 @@
             </div>
             <nav>
                 <a href="index.html" title="Главная">Главная</a>
+                <a href="docs.html" title="Правила">Правила</a>
                 <a href="index.html#about" title="О нас">О нас</a>
                 <a href="https://discord.gg/yxkfnW7sQQ" class="joinServer inactive" title="Присоедениться">Присоедениться</a>
             </nav>
@@ -401,7 +403,6 @@
                 </div>
             </div>
         </div>
-
     </footer>
 </body>
 </html>
