--- a/index.html
+++ b/index.html
@@ -77,12 +77,15 @@
                             <p class="text"></p>
                             <p class="text"></p>
                     </div>
-
+                    
                 </div>
+                <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+                <div class="elfsight-app-a20a449a-18e8-4779-a3d0-aaf32b608653"></div>
             </div>
         </div>
     </main>
     <footer>
+
         <div class="content">
             <div class="footer">
                 <label class="white text">FoxCraft 2020 - 2021</label>
