--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a href="/foxcraft.github.io/docs" class="menu_item">Правила</a>
                         </li>
                         <li class="login">
-                            <a href="https://discord.gg/yxkfnW7sQQ" target="_blank" class="login">Зайти на сервер</a>
+                            <a href="https://vk.com/fox_crafty?w=app5619682_-202476595" target="_blank" class="login">Зайти на сервер</a>
                         </li>
                     </ul>
                 </nav>
@@ -42,7 +42,7 @@
             <div class="content">
                 <div class="title_box">
                     <h1 class="title">Добро пожаловать на FoxCraft</h1>
-                    <h2 class="title2"><a class="link" href="https://discord.gg/yxkfnW7sQQ" target="_blank">Присоединяйтесь</a> к нам!</h2>
+                    <h2 class="title2"><a class="link" href="https://vk.com/fox_crafty?w=app5619682_-202476595" target="_blank">Присоединяйтесь</a> к нам!</h2>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
         <div class="content">
             <div class="footer">
                 <label class="white text">FoxCraft 2020 - 2021</label>
-                <div class="btn"><a href="https://discord.gg/yxkfnW7sQQ" class="btn">Зайти на сервер!</a></div>
+                <div class="btn"><a href="https://vk.com/fox_crafty?w=app5619682_-202476595" class="btn">Зайти на сервер!</a></div>
             </div>
         </div>
     </footer>
