--- a/docs.html
+++ b/docs.html
@@ -27,7 +27,7 @@
                             <a href="/foxcraft.github.io/#to_about" class="menu_item">О нас</a>
                         </li>
                         <li class="login">
-                            <a href="https://discord.gg/yxkfnW7sQQ" target="_blank" class="login">Зайти на сервер</a>
+                            <a href="https://vk.com/fox_crafty?w=app5619682_-202476595" target="_blank" class="login">Зайти на сервер</a>
                         </li>
                     </ul>
                 </nav>
@@ -192,7 +192,7 @@
         <div class="content">
             <div class="footer">
                 <label class="white text">FoxCraft 2020 - 2021</label>
-                <div class="btn"><a href="https://discord.gg/yxkfnW7sQQ" class="btn">Зайти на сервер!</a></div>
+                <div class="btn"><a href="https://vk.com/fox_crafty?w=app5619682_-202476595" class="btn">Зайти на сервер!</a></div>
             </div>
         </div>
     </footer>
