--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <a href="#to_about" class="menu_item">О нас</a>
                         </li>
                         <li class="menu_item">
-                            <a href="/foxcraft.github.io/docs" class="menu_item">Правила</a>
+                            <a href="/docs" class="menu_item">Правила</a>
                         </li>
                         <li class="login">
                             <a href="https://vk.com/fox_crafty?w=app5619682_-202476595" target="_blank" class="login">Зайти на сервер</a>
@@ -73,7 +73,7 @@
                             <p class="text">2. Запрещено использование любых дюпов майнкрафта кроме дюпа взрывов.</p>
                             <p class="text">3. Запрещено гриферство</p>
                             <p class="text">4. Запрещён нон рп!</p>
-                            <p class="text margt"><u>Более подробные правила вы найдете в нашем дискорде и по <a href="https://foxcraft-official.github.io/foxcraft.github.io/docs"" class="black">ссылке</a>!</u></p>
+                            <p class="text margt"><u>Более подробные правила вы найдете в нашем дискорде и по <a href="http://foxcraft.space/docs" class="black">ссылке</a>!</u></p>
                             <p class="text"></p>
                             <p class="text"></p>
                     </div>
