--- a/docs.html
+++ b/docs.html
@@ -14,17 +14,17 @@
         <div class="content">
             <div class="head">
                 <div class="logo">
-                    <a href="/foxcraft.github.io/#to_top">
+                    <a href="/#to_top">
                         <img src="icons/logo.png" alt="Логотип" class="logo_img">
                     </a>
                 </div>
                 <nav class="menu">
                     <ul class="menu_ul">
                         <li class="menu_item">
-                            <a href="/foxcraft.github.io/" class="menu_item">Главная</a>
+                            <a href="/" class="menu_item">Главная</a>
                         </li>
                         <li class="menu_item">
-                            <a href="/foxcraft.github.io/#to_about" class="menu_item">О нас</a>
+                            <a href="/#to_about" class="menu_item">О нас</a>
                         </li>
                         <li class="login">
                             <a href="https://vk.com/fox_crafty?w=app5619682_-202476595" target="_blank" class="login">Зайти на сервер</a>
