--- a/docs.html
+++ b/docs.html
@@ -24,7 +24,7 @@
                             <a href="/" class="menu_item">Главная</a>
                         </li>
                         <li class="menu_item">
-                            <a href="/#to_about" class="menu_item">О нас</a>
+                            <a href="/map.html" class="menu_item">Карта</a>
                         </li>
                         <li class="login">
                             <a href="https://vk.com/fox_crafty?w=app5619682_-202476595" target="_blank" class="login">Зайти на сервер</a>
