--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <a href="#to_top" class="menu_item">Главная</a>
                         </li>
                         <li class="menu_item">
-                            <a href="http://map.foxcraft.space:25676/" class="menu_item">Карта</a>
+                            <a href="#" class="menu_item">Карта</a>
                         </li>
                         <li class="menu_item">
                             <a href="/docs" class="menu_item">Правила</a>
@@ -41,8 +41,8 @@
         <div class="main_fone" id="to_top">
             <div class="content">
                 <div class="title_box">
-                    <h1 class="title">Добро пожаловать на FoxCraft</h1>
-                    <h2 class="title2"><a class="link" href="https://vk.com/fox_crafty?w=app5619682_-202476595" target="_blank">Присоединяйтесь</a> к нам!</h2>
+                    <h1 class="title">Добро пожаловать на FoxCraft..</h1>
+                    <h2 class="title2">..один из маленького количества, модифицированный RolePlay сервер!</h2>
                 </div>
             </div>
         </div>
@@ -51,9 +51,9 @@
                 <div class="about">
                     <div class="about_text">                  
                         <h1 class="title1 white">╭═────═ ⌘ О нас ⌘═────═╮</h1>
-                        <p class="text white">FoxCraft это сервер для общения друзей и веселого времяпровождения! Вам здесь будут рады в любом случае :3 Конечно мы не идеальны, как и всё, и здесь также присутствуют свои токсики, но даже они крайне милые^^
-                            Наш сервер объединяет разнообразные группы людей, в том числе и по интересам, например: фанаты Hollow Knight, Minecraft'а, Селесты и каждый может найти общий язык друг с другом!
-                            Мы не просто какой-то сервер - мы объединение друзей и друзей друзей. Мы FoxCraft!</p>
+                        <p class="text white">На сервере есть множество плагинов и датапаков, дополняющих игру
+                            (Например, вы можете редактировать стойки для брони в выживании или
+                            кататься на пчёлах :з) На сервере часто проходят всякие ивенты!</p>
                     </div>
                     <img src="icons/fox.jpg" alt="" class="small_img">
                 </div>
@@ -63,19 +63,14 @@
             <div class="content">
                 <div class="rules">
                     <div class="rules_text">
-                        <h1 class="title1">╭═──═ ⌘ Основные правила ⌘═──═╮</h1>
-                            <p class="text"><b>Пожалуйста, проявляйте уважение к любому человеку в чате, будь то он ваш друг или кто-то еще, кого вы не знаете..</b>
-                            <p class="text">1. Запрещен спам, флуд, сообщения не несущие смысловой нагрузки..</p>
-                            <p class="text">2. Запрещены оскорбления, если они оскорбительны...</p>
-                            <p class="text">3. Угрозы, если они реально угрожающие - запрещены.</p>
-                            <p class="text"><b>Правила сервера в майнкрафте:</b></p>
-                            <p class="text">1. Запрещено использование читов, в том числе ресурспаков x-ray, а так же стороннего софта который даёт вам преимущество над другими игроками.</p>
-                            <p class="text">2. Запрещено использование любых дюпов майнкрафта кроме дюпа взрывов.</p>
-                            <p class="text">3. Запрещено гриферство</p>
-                            <p class="text">4. Запрещён нон рп!</p>
-                            <p class="text margt"><u>Более подробные правила вы найдете в нашем дискорде и по <a href="http://foxcraft.space/docs" class="black">ссылке</a>!</u></p>
-                            <p class="text"></p>
-                            <p class="text"></p>
+                        <h1 class="title1">╭═──═ ⌘ Последние обновления ⌘═──═╮</h1>
+                            <li><label for="" class="text">Обновление ада. Добавлены новые мобы, боссы, данжи</label></li>
+                            <li><label for="" class="text">Добавление кроссплатферменности между версиями. Теперь можно играть на 1.16.4 - 1.17.1, а также на Bedrock на последней версии*</label></li>
+                            <li><label for="" class="text">Добавлены уровневые враждебные мобы</label></li>
+                            <li><label for="" class="text">Запущен второй сервер на ванильном ядре с датапаком New In Town. Вам предстоит создавать своё поселение и защищать его от Тирана!</label></li>
+                            <li><label for="" class="text">Добавлены новые буквенные вариации поддключения! (Буквенный айпи)</label></li>
+                            <li><label for="" class="text">Добавлен датапак, позволяющий быстро ломать деревья</label></li>
+                            
                     </div>
                     
                 </div>
@@ -88,7 +83,7 @@
 
         <div class="content">
             <div class="footer">
-                <label class="white text">FoxCraft 2020 - 2021</label>
+                <label class="white text">FoxCraft 2020 - 2021 | Все права защищены!</label>
                 <div class="btn"><a href="https://vk.com/fox_crafty?w=app5619682_-202476595" class="btn">Зайти на сервер!</a></div>
             </div>
         </div>
