--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                             <a href="#to_top" class="menu_item">Главная</a>
                         </li>
                         <li class="menu_item">
-                            <a href="#" class="menu_item">Карта</a>
+                            <a href="s25.joinserver.ru:25676" target="_blank" class="menu_item">Карта</a>
                         </li>
                         <li class="menu_item">
                             <a href="/docs" class="menu_item">Правила</a>
                         </li>
                         <li class="login">
-                            <a href="https://vk.com/fox_crafty?w=app5619682_-202476595" target="_blank" class="login">Зайти на сервер</a>
+                            <a href="https://vk.com/fox_crafty?w=app5619682_-202476595" class="login">Зайти на сервер</a>
                         </li>
                     </ul>
                 </nav>
