--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <a href="#to_top" class="menu_item">Главная</a>
                         </li>
                         <li class="menu_item">
-                            <a href="s25.joinserver.ru:25676" target="_blank" class="menu_item">Карта</a>
+                            <a href="http://s25.joinserver.ru:25676" target="_blank" class="menu_item">Карта</a>
                         </li>
                         <li class="menu_item">
                             <a href="/docs" class="menu_item">Правила</a>
